fixed href color on mobile views

--- a/style/global.css
+++ b/style/global.css
@@ -27,8 +27,3 @@ scroll-behavior: smooth;
 }
 
 
-a{
-  color:black !important;
-  text-decoration: none !important;
-
-}
